@@ -16,8 +16,6 @@
 package li.strolch.privilege.model;
 
 import java.text.MessageFormat;
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.Map;
 import java.util.Set;
 
@@ -44,17 +42,17 @@ public class PrivilegeContext {
 	// object state
 	//
 
-	private UserRep userRep;
-	private Certificate certificate;
-	private Map<String, IPrivilege> privileges;
-	private Map<String, PrivilegePolicy> policies;
+	private final UserRep userRep;
+	private final Certificate certificate;
+	private final Map<String, IPrivilege> privileges;
+	private final Map<String, PrivilegePolicy> policies;
 
 	public PrivilegeContext(UserRep userRep, Certificate certificate, Map<String, IPrivilege> privileges,
 			Map<String, PrivilegePolicy> policies) {
 		this.userRep = userRep;
 		this.certificate = certificate;
-		this.privileges = Collections.unmodifiableMap(new HashMap<>(privileges));
-		this.policies = Collections.unmodifiableMap(new HashMap<>(policies));
+		this.privileges = Map.copyOf(privileges);
+		this.policies = Map.copyOf(policies);
 	}
 
 	public UserRep getUserRep() {
@@ -75,7 +73,7 @@ public class PrivilegeContext {
 
 	public void assertHasPrivilege(String privilegeName) throws AccessDeniedException {
 		if (!this.privileges.containsKey(privilegeName)) {
-			String msg = MessageFormat.format(PrivilegeMessages.getString("Privilege.noprivilege.user"), //$NON-NLS-1$
+			String msg = MessageFormat.format(PrivilegeMessages.getString("Privilege.noprivilege.user"),
 					userRep.getUsername(), privilegeName);
 			throw new AccessDeniedException(msg);
 		}
@@ -87,7 +85,7 @@ public class PrivilegeContext {
 
 	public void assertHasRole(String roleName) throws AccessDeniedException {
 		if (!this.userRep.hasRole(roleName)) {
-			String msg = MessageFormat.format(PrivilegeMessages.getString("Privilege.noprivilege.role"), //$NON-NLS-1$
+			String msg = MessageFormat.format(PrivilegeMessages.getString("Privilege.noprivilege.role"),
 					userRep.getUsername(), roleName);
 			throw new AccessDeniedException(msg);
 		}
@@ -99,7 +97,7 @@ public class PrivilegeContext {
 				return;
 		}
 
-		String msg = MessageFormat.format(PrivilegeMessages.getString("Privilege.noprivilege.role"), //$NON-NLS-1$
+		String msg = MessageFormat.format(PrivilegeMessages.getString("Privilege.noprivilege.role"),
 				userRep.getUsername(), String.join(", ", roleNames));
 		throw new AccessDeniedException(msg);
 	}
@@ -121,7 +119,7 @@ public class PrivilegeContext {
 	public PrivilegePolicy getPolicy(String policyName) throws PrivilegeException {
 		PrivilegePolicy policy = this.policies.get(policyName);
 		if (policy == null) {
-			String msg = "The PrivilegePolicy {0} does not exist on the PrivilegeContext!"; //$NON-NLS-1$
+			String msg = "The PrivilegePolicy {0} does not exist on the PrivilegeContext!";
 			throw new PrivilegeException(MessageFormat.format(msg, policyName));
 		}
 		return policy;
@@ -173,7 +171,7 @@ public class PrivilegeContext {
 		IPrivilege privilege = this.privileges.get(privilegeName);
 		if (privilege == null) {
 			String msg = MessageFormat
-					.format(PrivilegeMessages.getString("Privilege.accessdenied.noprivilege"), //$NON-NLS-1$
+					.format(PrivilegeMessages.getString("Privilege.accessdenied.noprivilege"),
 							getUsername(), privilegeName, restrictable.getClass().getName(),
 							restrictable.getPrivilegeValue());
 			throw new AccessDeniedException(msg);
