@@ -1,6 +1,5 @@
 package li.strolch.report;
 
-import static java.util.stream.Collectors.toList;
 import static java.util.stream.Collectors.toSet;
 import static org.hamcrest.Matchers.containsInAnyOrder;
 import static org.junit.Assert.*;
@@ -26,8 +25,8 @@ import org.junit.Test;
 
 public class GenericReportTest {
 
-	private static final String RUNTIME_PATH = "target/GenericReportTest/"; //$NON-NLS-1$
-	private static final String CONFIG_SRC = "src/test/resources/reporttest"; //$NON-NLS-1$
+	private static final String RUNTIME_PATH = "target/GenericReportTest/";
+	private static final String CONFIG_SRC = "src/test/resources/reporttest";
 
 	private static RuntimeMock runtimeMock;
 	private static Certificate certificate;
@@ -55,8 +54,7 @@ public class GenericReportTest {
 					.forEach(e -> {
 
 						switch (e.get("slot").getAsString()) {
-						case "Slot 1":
-
+						case "Slot 1" -> {
 							assertEquals("Product 01", e.get("product").getAsString());
 							assertEquals("20.0", e.get("quantity").getAsString());
 							assertEquals("40.0", e.get("maxQuantity").getAsString());
@@ -64,11 +62,8 @@ public class GenericReportTest {
 							assertEquals("Section 001", e.get("section").getAsString());
 							assertEquals("Storage 01", e.get("storage").getAsString());
 							assertEquals("Location 01", e.get("location").getAsString());
-
-							break;
-
-						case "Slot 2":
-
+						}
+						case "Slot 2" -> {
 							assertEquals("Product 02", e.get("product").getAsString());
 							assertEquals("18.0", e.get("quantity").getAsString());
 							assertEquals("20.0", e.get("maxQuantity").getAsString());
@@ -76,11 +71,8 @@ public class GenericReportTest {
 							assertEquals("Section 001", e.get("section").getAsString());
 							assertEquals("Storage 01", e.get("storage").getAsString());
 							assertEquals("Location 01", e.get("location").getAsString());
-
-							break;
-
-						case "Slot 3":
-
+						}
+						case "Slot 3" -> {
 							assertEquals("Product 01", e.get("product").getAsString());
 							assertEquals("11.0", e.get("quantity").getAsString());
 							assertEquals("40.0", e.get("maxQuantity").getAsString());
@@ -88,11 +80,8 @@ public class GenericReportTest {
 							assertEquals("Section 002", e.get("section").getAsString());
 							assertEquals("Storage 02", e.get("storage").getAsString());
 							assertEquals("Location 02", e.get("location").getAsString());
-
-							break;
-
-						case "Slot 4":
-
+						}
+						case "Slot 4" -> {
 							assertEquals("Product 02", e.get("product").getAsString());
 							assertEquals("16.0", e.get("quantity").getAsString());
 							assertEquals("20.0", e.get("maxQuantity").getAsString());
@@ -100,11 +89,8 @@ public class GenericReportTest {
 							assertEquals("Section 002", e.get("section").getAsString());
 							assertEquals("Storage 02", e.get("storage").getAsString());
 							assertEquals("Location 02", e.get("location").getAsString());
-							break;
-						default:
-
-							fail("Unhandled result element: \n" + e.toString());
-							break;
+						}
+						default -> fail("Unhandled result element: \n" + e);
 						}
 					});
 		}
@@ -145,12 +131,8 @@ public class GenericReportTest {
 					.forEach(e -> {
 
 						String slotName = e.get("slot").getAsString();
-						switch (slotName) {
-						case "Slot 3":
-							break;
-						default:
+						if (!slotName.equals("Slot 3")) {
 							fail("Unexpected slot name " + slotName + ", should have been filtered!");
-							break;
 						}
 					});
 		}
@@ -171,7 +153,7 @@ public class GenericReportTest {
 			List<JsonObject> result = report.filter("Product", "product01") //
 					.dateRange(dateRange) //
 					.doReportAsJson() //
-					.collect(toList());
+					.toList();
 			assertTrue(result.isEmpty());
 		}
 
@@ -185,7 +167,7 @@ public class GenericReportTest {
 			List<JsonObject> result = report.filter("Product", "product01") //
 					.dateRange(dateRange) //
 					.doReportAsJson() //
-					.collect(toList());
+					.toList();
 			assertEquals(2, result.size());
 		}
 	}
@@ -204,7 +186,7 @@ public class GenericReportTest {
 				DateRange dateRange = new DateRange().from(from, true).to(to, false);
 
 				List<JsonObject> result = report.filter("Product", "product01").dateRange(dateRange).doReportAsJson()
-						.collect(toList());
+						.toList();
 				assertTrue(result.isEmpty());
 			}
 
@@ -215,7 +197,7 @@ public class GenericReportTest {
 				DateRange dateRange = new DateRange().from(from, true).to(to, false);
 
 				List<JsonObject> result = report.filter("Product", "product01").dateRange(dateRange).doReportAsJson()
-						.collect(toList());
+						.toList();
 				assertEquals(2, result.size());
 			}
 
@@ -226,7 +208,7 @@ public class GenericReportTest {
 				DateRange dateRange = new DateRange().from(from, true).to(to, false);
 
 				List<JsonObject> result = report.filter("Product", "product01", "product02").dateRange(dateRange)
-						.doReportAsJson().collect(toList());
+						.doReportAsJson().toList();
 				assertEquals(4, result.size());
 			}
 		}
@@ -313,30 +295,20 @@ public class GenericReportTest {
 			report.doReportAsJson().forEach(e -> {
 
 				switch (e.get("slot").getAsString()) {
-
-				case "Slot 1":
-				case "Slot 3": {
+				case "Slot 1", "Slot 3" -> {
 					assertEquals("Harry", e.get("firstName").getAsString());
 					assertEquals("Barns", e.get("lastName").getAsString());
 					slotsFound.getAndIncrement();
-					break;
 				}
-
-				case "Slot 2":
-				case "Slot 4":
-				case "Slot 5": {
+				case "Slot 2", "Slot 4", "Slot 5" -> {
 					assertEquals("Geoffrey", e.get("firstName").getAsString());
 					assertEquals("Bobcat", e.get("lastName").getAsString());
 					slotsFound.getAndIncrement();
-					break;
 				}
-
-				case "Slot 6": {
+				case "Slot 6" -> {
 					assertEquals("", e.get("firstName").getAsString());
 					slotsFound.getAndIncrement();
-					break;
 				}
-
 				}
 			});
 
